version/0.1/_sources/examples/legacy_standalone/08_CPWG.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\legacy_standalone\08_CPWG.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_legacy_standalone_08_CPWG.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_legacy_standalone_08_CPWG.py:


EDB: fully parametrized CPWG design
-----------------------------------
This example shows how you can use HFSS 3D Layout to create a parametric design
for a CPWG (coplanar waveguide with ground).

.. GENERATED FROM PYTHON SOURCE LINES 9-13

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports. Importing the ``Hfss3dlayout`` object initializes it
on version 2023 R2.

.. GENERATED FROM PYTHON SOURCE LINES 13-24

.. code-block:: default


    import os

    import numpy as np

    from pyedb.dotnet.edb import Edb
    from pyedb.generic.general_methods import (
        generate_unique_folder_name,
        generate_unique_name,
    )








.. GENERATED FROM PYTHON SOURCE LINES 25-28

Set non-graphical mode
~~~~~~~~~~~~~~~~~~~~~~
Set non-graphical mode. The default is ``False``.

.. GENERATED FROM PYTHON SOURCE LINES 28-31

.. code-block:: default


    non_graphical = False








.. GENERATED FROM PYTHON SOURCE LINES 32-35

Launch EDB
~~~~~~~~~~
Launch EDB.

.. GENERATED FROM PYTHON SOURCE LINES 35-40

.. code-block:: default


    aedb_path = os.path.join(generate_unique_folder_name(), generate_unique_name("pcb") + ".aedb")
    print(aedb_path)
    edbapp = Edb(edbpath=aedb_path, edbversion="2023.2")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    C:\Users\ansys\AppData\Local\Temp\pyedb_prj_NK4\pcb_GMDXL5.aedb




.. GENERATED FROM PYTHON SOURCE LINES 41-44

Define parameters
~~~~~~~~~~~~~~~~~
Define parameters.

.. GENERATED FROM PYTHON SOURCE LINES 44-53

.. code-block:: default


    params = {
        "$ms_width": "0.4mm",
        "$ms_clearance": "0.3mm",
        "$ms_length": "20mm",
    }
    for par_name in params:
        edbapp.add_project_variable(par_name, params[par_name])








.. GENERATED FROM PYTHON SOURCE LINES 54-57

Create stackup
~~~~~~~~~~~~~~
Create a symmetric stackup.

.. GENERATED FROM PYTHON SOURCE LINES 57-61

.. code-block:: default


    edbapp.stackup.create_symmetric_stackup(2)
    edbapp.stackup.plot()




.. image-sg:: /examples/legacy_standalone/images/sphx_glr_08_CPWG_001.png
   :alt: Stackup  
   :srcset: /examples/legacy_standalone/images/sphx_glr_08_CPWG_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <module 'matplotlib.pyplot' from 'C:\\actions-runner\\_work\\pyedb\\pyedb\\.venv\\lib\\site-packages\\matplotlib\\pyplot.py'>



.. GENERATED FROM PYTHON SOURCE LINES 62-65

Draw planes
~~~~~~~~~~~
Draw planes.

.. GENERATED FROM PYTHON SOURCE LINES 65-77

.. code-block:: default


    plane_lw_pt = ["0mm", "-3mm"]
    plane_up_pt = ["$ms_length", "3mm"]

    top_layer_obj = edbapp.modeler.create_rectangle(
        "TOP", net_name="gnd", lower_left_point=plane_lw_pt, upper_right_point=plane_up_pt
    )
    bot_layer_obj = edbapp.modeler.create_rectangle(
        "BOTTOM", net_name="gnd", lower_left_point=plane_lw_pt, upper_right_point=plane_up_pt
    )
    layer_dict = {"TOP": top_layer_obj, "BOTTOM": bot_layer_obj}








.. GENERATED FROM PYTHON SOURCE LINES 78-81

Draw trace
~~~~~~~~~~
Draw a trace.

.. GENERATED FROM PYTHON SOURCE LINES 81-87

.. code-block:: default


    trace_path = [["0", "0"], ["$ms_length", "0"]]
    edbapp.modeler.create_trace(
        trace_path, layer_name="TOP", width="$ms_width", net_name="sig", start_cap_style="Flat", end_cap_style="Flat"
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyedb.dotnet.edb_core.edb_data.primitives_data.EdbPath object at 0x000002E9A7C2FC10>



.. GENERATED FROM PYTHON SOURCE LINES 88-91

Create trace to plane clearance
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Create a trace to the plane clearance.

.. GENERATED FROM PYTHON SOURCE LINES 91-102

.. code-block:: default


    poly_void = edbapp.modeler.create_trace(
        trace_path,
        layer_name="TOP",
        net_name="gnd",
        width="{}+2*{}".format("$ms_width", "$ms_clearance"),
        start_cap_style="Flat",
        end_cap_style="Flat",
    )
    edbapp.modeler.add_void(layer_dict["TOP"], poly_void)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 103-106

Create ground via padstack and place ground stitching vias
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Create a ground via padstack and place ground stitching vias.

.. GENERATED FROM PYTHON SOURCE LINES 106-120

.. code-block:: default


    edbapp.padstacks.create(
        padstackname="GVIA",
        holediam="0.3mm",
        paddiam="0.5mm",
    )

    yloc_u = "$ms_width/2+$ms_clearance+0.25mm"
    yloc_l = "-$ms_width/2-$ms_clearance-0.25mm"

    for i in np.arange(1, 20):
        edbapp.padstacks.place([str(i) + "mm", yloc_u], "GVIA", net_name="GND")
        edbapp.padstacks.place([str(i) + "mm", yloc_l], "GVIA", net_name="GND")








.. GENERATED FROM PYTHON SOURCE LINES 121-124

Save and close EDB
~~~~~~~~~~~~~~~~~~
Save and close EDB.

.. GENERATED FROM PYTHON SOURCE LINES 124-126

.. code-block:: default

    edbapp.save_edb()
    edbapp.close_edb()




.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.625 seconds)


.. _sphx_glr_download_examples_legacy_standalone_08_CPWG.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 08_CPWG.py <08_CPWG.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 08_CPWG.ipynb <08_CPWG.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
